# nemosyne

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  README.md  SECURITY.md  SUPPORT.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  bug_report.yml  config.yml  feature_request.yml  (+1 more)
crates/nemosyne-evaluation/: Cargo.toml
crates/nemosyne-evaluation-corpus/: Cargo.toml
crates/nemosyne-evaluation-corpus/src/: lib.rs
crates/nemosyne-evaluation-corpus/src/activation/: error.rs  fingerprint.rs  mod.rs
crates/nemosyne-evaluation-corpus/src/activation/coding_agent/: calibration.rs  held_out.rs  mod.rs  schema.rs
crates/nemosyne-evaluation-corpus/src/activation/model/: corpus.rs  evidence.rs  ids.rs  mod.rs
crates/nemosyne-evaluation-corpus/src/activation/revision_one/: corpus.rs  mod.rs  scenario.rs  tests.rs
crates/nemosyne-evaluation-corpus/tests/: coding_agent_v1.rs
crates/nemosyne-evaluation-corpus/tests/coding_agent_v1/: discrimination.rs  provenance.rs  references.rs  revision.rs  structure.rs
crates/nemosyne-evaluation/src/: lib.rs
crates/nemosyne-evaluation/src/activation/: error.rs  evaluate.rs  input.rs  mod.rs  model.rs  preference_graph.rs  report.rs
crates/nemosyne-evaluation/tests/: activation_evaluation.rs
crates/nemosyne-evaluation/tests/activation_evaluation/: determinism.rs  metrics.rs  validation.rs
docs/: README.md
scripts/: check-documentation.sh  classify-documentation-change.sh  test-documentation-change-policy.sh  test-documentation-check.sh
(+49 files in other folders)
