[workspace]
members = ["crates/nemosyne-core"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"
license = "Apache-2.0"
repository = "https://github.com/Lamentis-operating-systems/nemosyne"

[workspace.lints.rust]
missing_docs = "deny"
unsafe_code = "forbid"
