[package]
name = "nemosyne-evaluation"
description = "Offline evaluation tools for Nemosyne."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
nemosyne-core = { path = "../nemosyne-core" }

[lints]
workspace = true
